-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.108 2007-10-01 20:14:53 guru Exp $
-----------------------------------------------------------------------------------------

2007-10-01	pwessel
	* surface.c:		Make sure verbose starts with surface:
	
2007-10-01	remko
	* gmt_support.c (GMT_sample_cpt):	Needed to reverse z_low and z_high values as well as
				rgb values when reversing color maps.
	* makecpt.c:		Need to reverse colormap intervals when -I is given.
				Both these fixes were needed to properly reverse colormaps with uneven
				intervals.
	* share/cpt/GMT_{cyclic,panoply}.cpt:	Two more master color maps added.

2007-09-29	pwessel
	* *.c:			Make sure memory allocated by strdup is freed by free (Windows only)
	
2007-09-29	remko
	* gmt_vector.[ch]:	Added argument "mode" to GMT_fix_up_path to allow drawing lines
				first following a meridian, then a parallel, or vice versa.
	* psxy.c, grdmask.c:	Extended option -A with -Am and -Ap to use new GMT_fix_up_path modes.
	* pscoast.c, gmt_support.c, gmt_shore.c:	Added mode=0 to GMT_fix_up_path arguments.

2007-09-28	remko
	* gmt_stat.h, gmt_math.h:	Moved functions defined in gmt_stat.c from gmt_math.h to
				gmt_stat.h.
	* gmt_stat.c:		Added GMT_plm_bar to compute normalized Legendre functions to very
				high degree and order. Made GMT_factorial public.
	* gmtmath.c:		Use GMT_plm_bar to determine PLMg. Added FACT (factorial).
	* grdmath.c:		Use GMT_plm_bar to determine PLMg, YLM and YLMg. Added FACT (factorial).

2007-09-28	pwessel
	* gmt_custom_io.c:	When reading Surfer subregions we must adjust as grids starts at
				the lower left corner and not upper left.
				
2007-09-26	pwessel
	* meca/*.c:		Made Windows DLL workable by using the GMT_* i/o functions.
	* grdblend.c:		---"---
	
2007-09-26	remko
	* *.txt:		Now print "Generic Mapping Tools" at top of man page.
	* explain_-J.txt, psbasemap.txt:	Added info on general perspective view (-JG).