@@ -1,5 +1,5 @@
 This server is one of 8 mirror sites for the Generic Mapping Tools (GMT).
-		This directory contains version 4.2.0
+		This directory contains version 4.2.1
 
 The mirror sites are:
 
