@@ -1,7 +1,7 @@
-	$Id: VERSION,v 1.16 2007-03-28 03:02:12 pwessel Exp $
+	$Id: VERSION,v 1.17 2007-10-02 00:43:50 guru Exp $
 
-	The Generic Mapping Tools version 4.2.0
-	Released on April 1, 2007
+	The Generic Mapping Tools version 4.2.1
+	Released on October 1, 2007
 
-The latest GMT version available from this site is:	4.2.0
+The latest GMT version available from this site is:	4.2.1
 The latest patch is:					N/A
