@@ -1,5 +1,5 @@
 <HTML>
-<!--  $Id: gmt_faq.html,v 1.20 2007-03-29 21:48:13 pwessel Exp $  -->
+<!--  $Id: gmt_faq.html,v 1.21 2007-10-02 00:43:50 guru Exp $  -->
 <TITLE>GMT - Frequently Asked GMT Questions</TITLE>
 <BODY bgcolor="#ffffff">
 
@@ -10,7 +10,7 @@
 <LI>	<A> Who developed GMT ? </A>
 <P>GMT was created in 1988 by <A HREF="http://www.soest.hawaii.edu/pwessel/pwessel.html">Paul Wessel</A>
 and <A HREF="http://ibis.grdl.noaa.gov/SAT/people/walter.html">Walter H. F. Smith</A>, and has undergone
-several revisions and major enhancements since then.  The current version is 4.2.0.
+several revisions and major enhancements since then.  The current version is 4.2.1.
 GMT is supported by the National Science Foundation.</P></LI>
 <HR>
 <LI>	<A> Who is using GMT ? </A>
