@@ -1,5 +1,5 @@
 <HTML>
-<!--    $Id: gmt_home.html,v 1.13 2007-03-29 21:48:13 pwessel Exp $      -->
+<!--    $Id: gmt_home.html,v 1.14 2007-10-02 00:43:50 guru Exp $      -->
 <HEAD>
 <TITLE>GMT - The Generic Mapping Tools</TITLE>
 </HEAD>
@@ -23,7 +23,7 @@ and is supported by the
 It is released under the
 <A HREF="http://www.gnu.org/copyleft/gpl.html" target="_blank">GNU General Public License</A>.
 <HR>
-<CENTER>Current version is 4.2.0, Released April 1, 2007.<CENTER>
+<CENTER>Current version is 4.2.1, Released October 1, 2007.<CENTER>
 <CENTER><IMG SRC="gmt_usage.jpg" ALT="RETURN" BORDER=0></CENTER>
 <P><H5>GMT is used all over the world. Each yellow dot represent a 15x15 arc minute block with one
 or more registered user or institution.  So far, over 1500 such blocks have been registered,
