@@ -1,5 +1,5 @@
 <HTML>
-<!--    $Id: gmt_nav.html,v 1.13 2007-04-03 04:32:55 pwessel Exp $      -->
+<!--    $Id: gmt_nav.html,v 1.14 2007-10-02 00:43:50 guru Exp $      -->
 <HEAD>
 <TITLE>The GMT Home Page</TITLE>
 </HEAD>
@@ -63,7 +63,7 @@
 Paul Wessel
 </ADDRESS>
 <BR>Last updated:
-<BR>April 2, 2007 11:45 HST
+<BR>October 2, 2007 11:45 HST
 <HR><P>
 <A HREF="http://www.soest.hawaii.edu/" target="_top"><IMG SRC="soest_logo_reduced2.gif" ALT="Visit SOEST"></A><BR>
 Visit SOEST home page
