@@ -1,7 +1,11 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.108 2007-10-01 20:14:53 guru Exp $
+	$Id: ChangeLog,v 1.109 2007-10-02 00:43:50 guru Exp $
 -----------------------------------------------------------------------------------------
 
+-----------------------------------------------------------------------------------------
+2007-10-02
+	* tar 4.2.1 made and released via email
+-----------------------------------------------------------------------------------------
 2007-10-01	pwessel
 	* surface.c:		Make sure verbose starts with surface:
 	
